--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,21 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
+        <lombok.version>1.18.36</lombok.version>
+        <classfinder.version>1.0.0</classfinder.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.36</version>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>dtm.discovery</groupId>
             <artifactId>classfinder</artifactId>
-            <version>1.0.0</version>
+            <version>${classfinder.version}</version>
         </dependency>
     </dependencies>
 </project>
